ganti internal css ke eksternal css

--- a/pertemuan-04/style.css
+++ b/pertemuan-04/style.css
@@ -1,4 +1,4 @@
-<style
+
     #about,
     #Contact {
 
@@ -88,6 +88,11 @@
     }
 
     @media (max-width: 600px) {
+    #contact input,
+    #contact textarea,
+    #contact button {
+      width: 100%;
+    }
 
       #about p,
       #Contact label {
@@ -108,4 +113,3 @@
         width: 100%;
       }
     }
-  </style>
