--- a/pertemuan-04/style.css
+++ b/pertemuan-04/style.css
@@ -1,3 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #f5f5f5;
+  color: #333;
+  Line-height: 1.5;
+}
 
     #about,
     #Contact {
