--- a/pertemuan-04/style.css
+++ b/pertemuan-04/style.css
@@ -146,4 +146,10 @@ header li a {
       #Contact button {
         width: 100%;
       }
+      footer {
+        background: #222;
+        color: #aaa;
+        text-align: center;
+        padding: 10px;
+      }
     }
