styling header mode mobile

--- a/pertemuan-04/style.css
+++ b/pertemuan-04/style.css
@@ -167,4 +167,12 @@ header li a {
       background-color: #cc04a1;
       transform: translateY(1px);
     }
-  }
+    @media (Max-width: 600px) {
+      header {
+        padding: 16px;
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+      }
+    } 
+    }
