--- a/pertemuan-05/style.css
+++ b/pertemuan-05/style.css
@@ -167,16 +167,14 @@ header li a {
       background-color: #cc04a1;
       transform: translateY(1px);
     }
-    .menu-toggle {
-      display: none;
-      background: none;
-      border: none;
-      color: #fff;
-      font-size: 28px;
-      cursor: pointer;
-    }
+    @media (max-width: 600px) {
+      .menu-toggle {
+        display: block;
+        position: absolute;
+        left: 16px;
+        top: 8px;
+      }
     
-    @media (Max-width: 600px) {
       header {
         padding: 16px;
         position: sticky;
