--- a/pertemuan-08/bahan UTS PWD/style.css
+++ b/pertemuan-08/bahan UTS PWD/style.css
@@ -61,7 +61,9 @@ header li a:active {
 
 #home,
 #about,
-#contact {
+#contact,
+#komentar,
+#aboutyou {
   background-color: #ffffff;
   border-radius: 10px;
   padding: 20px;
@@ -72,7 +74,9 @@ header li a:active {
 
 #home h2,
 #about h2,
-#contact h2 {
+#contact h2,
+#komentar h2,
+#aboutyou h2 {
   color: #003366;
   border-bottom: 2px solid #003366;
   padding-bottom: 6px;
@@ -85,7 +89,9 @@ header li a:active {
 }
 
 #about p,
-#contact label {
+#contact label,
+#komentar p,
+#aboutyou label {
   display: flex;
   justify-content: flex-start;
   align-items: baseline;
@@ -95,7 +101,8 @@ header li a:active {
 }
 
 #about strong,
-#contact label>span {
+#contact label>span,
+#aboutyou label>span {
   min-width: 180px;
   color: #003366;
   font-weight: 600;
@@ -105,7 +112,9 @@ header li a:active {
 }
 
 #contact input,
-#contact textarea {
+#contact textarea,
+#aboutyou input,
+#aboutyou textarea {
   flex: 1;
   border: 1px solid #ccc;
   border-radius: 6px;
@@ -116,7 +125,8 @@ header li a:active {
   box-sizing: border-box;
 }
 
-#contact button {
+#contact button,
+#aboutyou button{
   margin-top: 10px;
   display: inline-block;
   padding: 10px 24px;
@@ -128,25 +138,29 @@ header li a:active {
   margin-right: 8px;
 }
 
-#contact button[type="submit"] {
+#contact button[type="submit"],
+#aboutyou button[type="submit"] {
   background-color: #003366;
   color: #fff;
   font-weight: 600;
 }
 
-#contact button[type="reset"] {
+#contact button[type="reset"],
+#aboutyou button[type="reset"] {
   background-color: #b4b4b4;
   color: #272727;
   font-weight: 500;
 }
 
-#contact button[type="submit"]:hover {
+#contact button[type="submit"]:hover,
+#aboutyou button[type="submit"]:hover {
   background-color: #0379ee;
   transform: translateY(-1px);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
-#contact button[type="reset"]:hover {
+#contact button[type="reset"]:hover,
+#aboutyou button[type="reset"]:hover {
   background-color: #cccccc;
   transform: translateY(-1px);
 }
@@ -216,13 +230,15 @@ footer {
   }
 
   #about p,
-  #contact label {
+  #contact label,
+  #aboutyou label {
     flex-direction: column;
     align-items: flex-start;
   }
 
   #about strong,
-  #contact label>span {
+  #contact label>span,
+  #aboutyou label>span {
     text-align: left;
     padding-right: 0;
     margin-bottom: 2px;
@@ -231,6 +247,12 @@ footer {
   #contact input,
   #contact textarea,
   #contact button {
+    width: 100%;
+  }
+
+  #aboutyou input,
+  #aboutyou textarea,
+  #aboutyou button {
     width: 100%;
   }
 }
